--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,9 +1,30 @@
 <head>
+  {% if page.title %}
+  <meta property="og:title" content="{{ page.title }} | Test Page" />
+  <title>{{ page.title }} | Test Page</title>
+  {% else %}
   <title>Test Page: Don't Panic</title>
+  <meta property="og:title" content="Test Page: Don't Panic" />
+  {% endif %} {% if page.description %}
+  <meta name="description" content="{{ page.description }}" />
+  <meta property="og:description" content="{{ page.description }}" />
+  {% else %}
+  <meta name="description" content="This is a dangerous site." />
+  <meta property="og:description" content="This is a dangerous site." />
+  {% endif %}
   <meta charset="utf-8" /><meta
     name="viewport"
     content="width=device-width, initial-scale=1.0"
   />
+  <link href="/favicon.png" rel="icon" />
+  <link href="/apple-touch-icon.png" rel="apple-touch-icon" />
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    href="https://fonts.googleapis.com/css2?family=Oleo+Script+Swash+Caps&family=Open+Sans&family=Raleway:wght@100&display=swap"
+    rel="stylesheet"
+  />
+  <link href="/fonts/css/all.css" rel="stylesheet" />
   <link rel="stylesheet" href="/css/reset.css" />
   <link rel="stylesheet" href="/css/main.css" />
 </head>
