--- a/css/main.css
+++ b/css/main.css
@@ -8,6 +8,16 @@ body {
   flex-direction: column;
   font-family: helvetica, arial, sans;
   min-height: 100vh;
+  font-family: "Open Sans", helvetica, arial, sans;
+}
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Raleway", helvetica, sans;
+  font-weight: 100;
 }
 h1 {
   font-size: 7vw;
@@ -375,15 +385,15 @@ h2 ~ p {
   color: #fff;
   display: inline-block;
   font-family: helvetica, arial, sans;
-  font-size: 1rem;
+  font-size: 1.7em;
   font-weight: bold;
-  height: 2.5em;
+  height: 1.5em;
   line-height: 1;
-  padding-top: 0.85em;
+  padding-top: 0.25em;
   text-align: center;
   text-decoration: none;
   vertical-align: middle;
-  width: 2.5em;
+  width: 1.5em;
 }
 .social-list > li {
   display: inline-block;
@@ -407,6 +417,7 @@ h2 ~ p {
 }
 
 .bio-box h3 {
+  font-family: "Oleo Script Swash Caps", cursive;
   color: #fff;
   font-size: 1.5em;
   margin: -40px 0 1em;
